Fix Table Display for mobile view and added load table for access

--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -32,11 +32,11 @@
 <!-- DataTales Example -->
 <div class="card shadow mb-4 table-size">
     <div class="card-header py-3 header-bg">
-        <h6 class="m-0 font-weight-bold table-title text-white">DataTables Example</h6>
+        <h6 class="m-0 font-weight-bold table-title text-white">Access Data:</h6>
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered" id="access-table" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Access Code</th>
@@ -47,74 +47,8 @@
                         <th class = "col-2">Action</th>               
                     </tr>
                 </thead>
-                    
+
                 <tbody>
-                    <tr class="tr-hover">
-                        <td>1000</td>
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>      
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>                              
-                    </tr>
-                    <tr class="tr-hover">
-                        <td>1001</td>
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>
-                    </tr>
-                    <tr class="tr-hover">
-                        <td>1002</td>
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>
-                    </tr>
-                    <tr class="tr-hover">
-                        <td>1002</td>
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1002</td>
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>1002</td>
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </div>
