--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -8,6 +8,13 @@
 <!-- Custom scripts for all pages-->
 <script src="javascripts/sb-admin-2.min.js"></script>
 
+<!-- PCreated by level plugins -->
+<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- PCreated by level custom scripts -->
+<script src="/javascripts/js/demo/datatables-demo.js"></script>
+
 <!-- Icon-->
 <script src="https://kit.fontawesome.com/91d5bebb50.js" crossorigin="anonymous"></script>
 
