--- a/views/employees/employeesscripts.ejs
+++ b/views/employees/employeesscripts.ejs
@@ -1,4 +1,223 @@
 <script>
+$(document).ready(function () {
+    //Functionality
+    var activePositions = []; // Array to store position names with "ACTIVE" status
+
+    let employeeid = "";
+    let status = "";
+
+    LoadTable();
+
+    $('#employees-dataTable tbody').on('click', 'tr', function () {
+        var dataRow = [];
+        $(this).closest('tr').find('td').each(function () {
+            dataRow.push($(this).text());
+        });
+        console.log(dataRow);
+        employeeid = dataRow[0];
+        status = dataRow[7]
+    }) 
+
+    $(document).on('click', '#addBtn', function () {
+        let employeeid = $('#employeeid').val();
+        let fullname = $('#fullname').val();
+        let positionname = $('#positionname').val();
+        let contactinfo = $('#contactinfo').val();
+        let datehired = $('#datehired').val();
+
+        var message = "";
+
+        if (employeeid == '') { message += 'Employee ID, ' }
+        if (fullname == '') { message += 'Fullname, ' }
+        if (positionname == '') { message += 'Position Name, ' }
+        if (contactinfo == '') { message += 'Contact Info, ' }
+        if (datehired == '') { message += 'Date Hired, ' }
+
+        if (message != '') {
+            warning('Required', `Please fill up ${message}`);
+        }
+        else {
+            $.ajax({
+                type: 'POST',
+                url: '/employees/save',
+                data: {
+                    employeeid: employeeid,
+                    fullname: fullname,
+                    positionname: positionname,
+                    contactinfo: contactinfo,
+                    datehired: datehired
+                },
+                success: function (result) {
+                    if (result.msg == 'success') {
+                        LoadTable()
+                        success('Saved', 'Successfully')
+                        $('#employeeid').val('');
+                        $('#fullname').val('');
+                        $('#positionname').val('');
+                        $('#contactinfo').val('');
+                        $('#datehired').val('');
+                    }
+
+                    if (result.msg == 'exist') {
+                        warning('Exist', `${employeeid} already exist!`);
+                    }
+
+                },
+                error: function (err) {
+                    errormsg(err);
+                }
+            })
+        }
+    })
+    function LoadTable() {
+        $('#employees-dataTable').DataTable({
+            'destroy': true,
+            'processing': true,
+            'serverSide': true,
+            'paging': false,
+            'searching': false,
+            'info': false,
+            'scrollCollapse': true,
+            'serverMethod': 'GET',
+            'ajax': {
+                'url': '/employees/load',
+                'dataSrc': (json) => {
+                    var finalData = [];
+                    var data = json.data;
+
+                    console.log(data);
+                    $.each(data, (key, item) => {
+                        var action = '';
+                        var status = item.status;
+
+                        if (status == 'ACTIVE') {
+                            action = '<button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button> <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>'
+                        }
+                        if (status == 'INACTIVE') {
+                            action = '<button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button> <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>'
+                        }
+
+                        finalData.push({
+                            employeeid: item.employeeid,
+                            fullname: item.fullname,
+                            position: item.position,
+                            contactinfo: item.contactinfo,
+                            datehired: item.datehired,
+                            status: item.status,
+                            createdby: item.createdby,
+                            createddate: item.createddate,
+                            action: action,
+                        })
+
+                    })
+
+                    return finalData;
+                },
+            },
+            'columnDefs': [{
+                targets: 1,
+                className: 'td-indent',
+            }],
+            'columns': [
+                { data: 'employeeid' },
+                { data: 'fullname' },
+                { data: 'position' },
+                { data: 'contactinfo' },
+                { data: 'datehired'},
+                { data: 'createdby' },
+                { data: 'createddate' },
+                { data: 'status' },
+                { data: 'action' },
+            ],
+            'fixedHeader': true,
+            initComplete: function () {
+                console.log('init complete');
+            }
+        });
+    }
+
+    function LoadList() {
+        $.ajax({
+            type: 'GET',
+            url: '/position/load',
+            success: function (result) {
+                var data = result.data;
+
+                $.each(data, function (key, item) {
+                    if (item.status == "ACTIVE") {
+                        activePositions.push(item.positionname); 
+                    }
+                });
+                //console.log(activePositions);
+                populateCustomDropdown();
+            },
+            error: function (err) {
+                errormsg(err);
+            }
+        });
+    }
+
+    $(document).on('click', '#activeBtn', function(){
+        console.log(employeeid);
+        console.log(status);
+        $.ajax({
+            type: 'POST',
+            url: '/employees/status',
+            data: {
+                status: status,
+                employeeid: employeeid,
+            },
+            success: function (result) {
+                if (result.msg == 'success') {
+                    LoadTable();
+                    success('Saved', 'Successfully')
+                }
+
+                if (result.msg == 'notexist') {
+                    warning(`${employeeid} does not exist!`);
+                }
+
+            },
+            error: function (err) {
+                errormsg(err);
+            }
+        })
+    });
+
+    $(document).on('click', '#inactiveBtn', function(){
+        console.log(employeeid);
+        console.log(status);
+        $.ajax({
+            type: 'POST',
+            url: '/employees/status',
+            data: {
+                status: status,
+                employeeid: employeeid,
+            },
+            success: function (result) {
+                if (result.msg == 'success') {
+                    LoadTable();
+                    success('Saved', 'Successfully')
+                }
+
+                if (result.msg == 'notexist') {
+                    warning(`${employeeid} does not exist!`);
+                }
+
+            },
+            error: function (err) {
+                errormsg(err);
+            }
+        })
+    });
+
+    function populateCustomDropdown() {
+        for (const position of activePositions) {
+            addOption("positionDropdown", position);
+        }
+    }
+    //Custom Dropdown
+
     function setupCustomDropdown(inputId, dropdownId, optionClass) {
         const inputElement = document.getElementById(inputId);
         const dropdownElement = document.getElementById(dropdownId);
@@ -26,12 +245,6 @@
             }
             dropdownElement.style.display = "block";
         });
-
-        inputElement.addEventListener("blur", function () {
-            setTimeout(() => {
-                dropdownElement.style.display = "none";
-            }, 100);
-        });
     }
 
     function addOption(dropdownId, optionText) {
@@ -39,14 +252,20 @@
         const newOption = document.createElement("div");
         newOption.className = "dropdown-option";
         newOption.textContent = optionText;
+
+        newOption.addEventListener("click", function () {
+            const inputElement = document.getElementById("positionname");
+            inputElement.value = optionText;
+            dropdownElement.style.display = "none";
+        });
+        
         dropdownElement.appendChild(newOption);
     }
 
-    const positionOption = ["POSITION 3", "POSITION 4", "POSITION 5"];
+    LoadList()
 
-    for (const optionText of positionOption) {
-        addOption("positionDropdown", optionText);
+    setupCustomDropdown("positionname", "positionDropdown", "dropdown-option");
+        
     }
-
-    setupCustomDropdown("positionInput", "positionDropdown", "dropdown-option");
+)
 </script>
