--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -11,40 +11,34 @@
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <div class="input-group">
-                                <input class="form-control text-center custom-input" placeholder="Select/Input Employee" name="employeename" id="employeeInput" aria-describedby="basic-addon2" />
+                                <input class="form-control text-center custom-input" placeholder="Select/Input Employee" name="employeeid" id="employeeid" aria-describedby="basic-addon2" />
                                 <div class="input-group-append">
                                     <span class="input-group-text" id="basic-addon2">Employee ID</span>
                                 </div>
                             </div>
                             <div class="custom-dropdown" id="employeeDropdown">
-                                <div class="dropdown-option">EMPLOYEE ID 1</div>
-                                <div class="dropdown-option">EMPLOYEE ID 2</div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="input-group">
-                                <input class="form-control text-center custom-input" placeholder="Select/Input Access" name="accessname" id="accessInput"/>
+                                <input class="form-control text-center custom-input" placeholder="Select/Input Access" name="accessname" id="accessname"/>
                                 <div class="input-group-append">
                                     <span class="input-group-text">Access Type</span>
                                 </div>
                             </div>
                             <div class="custom-dropdown" id="accessDropdown">
-                                <div class="dropdown-option">ACCESS TYPE 1</div>
-                                <div class="dropdown-option">ACCESS TYPE 2</div>
                             </div>
                         </div>
                     </div>
                     <div class="row d-flex justify-content-center">
                         <div class="col-md-6">
                             <div class="input-group">
-                                <input class="form-control text-center custom-input" placeholder="Select/Input Position" name="positionname" id="positionInput"/>
+                                <input class="form-control text-center custom-input" placeholder="Select/Input Position" name="positionname" id="positionname"/>
                                 <div class="input-group-append">
                                     <span class="input-group-text">Position</span>
                                 </div>
                             </div>
                             <div class="custom-dropdown" id="positionDropdown">
-                                <div class="dropdown-option">POSITION 1</div>
-                                <div class="dropdown-option">POSITION 2</div>
                             </div>
                         </div>
                     </div>
@@ -68,7 +62,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered" id="users-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">User Code</th>
@@ -83,19 +77,6 @@
                 </thead>
                     
                 <tbody>
-                    <tr class="tr-hover">
-                        <td>1000</td>
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>      
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>                                    
-                        <td>2011/04/25</td>
-                        <td>Active</td>      
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>                              
-                    </tr>
                 </tbody>
             </table>
         </div>
