--- a/views/pos/pos.ejs
+++ b/views/pos/pos.ejs
@@ -74,7 +74,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered" id="pos-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">POS ID</th>
@@ -90,20 +90,6 @@
                 </thead>
                     
                 <tbody>
-                    <tr class="tr-hover">
-                        <td>1000</td>
-                        <td>IT service provider</td>
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>      
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>     
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>                              
-                    </tr>
                 </tbody>
             </table>
         </div>
