Added branch scripts load, save, and status update

--- a/views/branch/branch.ejs
+++ b/views/branch/branch.ejs
@@ -47,13 +47,26 @@
                     <div class="row justify-content-center">
                         <div class="col-md-6">
                             <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <button class="btn btn-outline-secondary" type="button">Upload Logo</button>
-                                </div>
                                 <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="inputGroupFile03">
-                                    <label class="custom-file-label" for="inputGroupFile03">Choose file</label>
+                                    <input
+                                        class="btn btn-outline-inventory shadow-sm w-100"
+                                        type="file"
+                                        id="imageInput"
+                                        placeholder="Select Image"
+                                    />
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-md-6">
+                            <div class="align-img">
+                                <img
+                                id="logoimage"
+                                src="/images/img/logo(Small).png"
+                                class="img-thumbnail "
+                                alt="..."
+                            />
                             </div>
                         </div>
                     </div>
@@ -77,7 +90,7 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container">
-            <table class="table table-bordered" id="position-dataTable" width="100%" cellspacing="10">
+            <table class="table table-bordered" id="branch-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
                         <th class = "col-1">Branch ID</th>
@@ -93,20 +106,6 @@
                 </thead>
                     
                 <tbody>
-                    <tr class="tr-hover">
-                        <td>1000</td>
-                        <td>5L Main</td>
-                        <td>181-030-071-000</td>                                        
-                        <td>Macaria Drive, Phase 7B, Pacita I, San Pedro, Laguna</td>
-                        <td>Active</td>      
-                        <td>Joseph Orencio</td>                                        
-                        <td>2011/04/25</td>
-                        <td>Active</td>     
-                        <td class="text-center">
-                            <button type="button" class="btn btn-outline-inventory w-100 mb-1">Inactive</button>
-                            <button type="button" class="btn btn-outline-inventory w-100">Edit</button>  
-                        </td>                              
-                    </tr>
                 </tbody>
             </table>
         </div>
